unpackaged/main/default/objects/Error_Logger__c/Error_Logger__c.object-meta.xml
<CustomObject>
    <description>A Custom Object to capture Exceptions and Error information.</description>
    <label>Error  Logger</label>
    <nameField>
        <displayFormat>Error - {000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>