unpackaged/main/default/objects/Error_Logger__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>DateTime.Now() -&gt; Date and Time when the error occurred.</description>
    <label>Date / Time</label>
    <type>DateTime</type>
</CustomField>