unpackaged/main/default/objects/Error_Logger__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>The record Id for which the error occurred.</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>