unpackaged/main/default/objects/Error_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Error_Message__c</columns>
    <columns>User_Name__c</columns>
    <columns>Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>