unpackaged/main/default/objects/Error_Logger__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Date_Time__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>