unpackaged/main/default/objects/Error_Logger__c/listViews/Bad_Request.listView-meta.xml
<ListView>
    <fullName>Bad_Request</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Record_ID__c</columns>
    <columns>User_Name__c</columns>
    <columns>Date_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>CZ_CheckPaymentQueueable::execute</value>
    </filters>
    <filters>
        <field>Error_Type__c</field>
        <operation>equals</operation>
        <value>api call - 400</value>
    </filters>
    <label>Bad Request</label>
</ListView>