unpackaged/main/default/objects/Error_Logger__c/listViews/Callout_Exceptions.listView-meta.xml
<ListView>
    <fullName>Callout_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Record_ID__c</columns>
    <columns>User_Name__c</columns>
    <columns>Date_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Type__c</field>
        <operation>equals</operation>
        <value>System.CalloutException</value>
    </filters>
    <label>Callout Exceptions</label>
</ListView>