unpackaged/main/default/objects/Error_Logger__c/listViews/Corrections.listView-meta.xml
<ListView>
    <fullName>Corrections</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Description__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Date_Time__c</columns>
    <columns>User_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Type__c</field>
        <operation>equals</operation>
        <value>Correction</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Corrections</label>
</ListView>