unpackaged/main/default/objects/Error_Logger__c/listViews/Derrick_View.listView-meta.xml
<ListView>
    <fullName>Derrick_View</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Error_Type__c</columns>
    <columns>User_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Derrick View</label>
</ListView>